styles.css
body {
	background-color: #222222;
	font-family: "Arial", sans-serif;
}

.main {
	margin: 10vmin auto;
	display: flex;	
	flex-wrap: wrap;
	flex-direction: row;
	background-color: #222222;
	width: 27vmax; /*447px*/
	height: 40vmax; /*auto*/
}

.grid {
	flex-grow: 1;
	min-width: 20%;
}

.main button:hover {
	opacity: 1;
}

.main button:active {
	opacity: .7;
}

.disp {
	text-align: right;
	font-size: 4.5vmax;
	margin: auto 0.35em;
	color: #f2f2f2;
	width: 30vmax;
	height: 15%;
	word-wrap: wrap;
	overflow-x: scroll;
}

.disp::-webkit-scrollbar {
    background-color: #222222;
}

.disp::-webkit-scrollbar-thumb {
  	background-color: #2f2f2f;
  	border-radius: 1vmax;
}

.grid {
	border-style: none;
	font-size: 1vmax; /*20pt*/
	margin: 0.5em 5px;
	margin-left: 0.5em;
	border-radius: 50%;
	height: 15%; /*3.5em*/
	width: 10%;	/*3.5em*/
	color: #f2f2f2;
	opacity: 0.85;
}

#zero {
	width: 35%;
	border-radius: 3vmax;
}

#zero, #dec, #one, #two, #three, #four, #five, #six, #seven, #eight, #nine {
	background-color: #404040;
}

#clear, #int, #backspace {
	background-color: #bbbbbb;
	color: #222222;
}

#div, #mul, #sub, #add, #eq {
	background-color: #ff9d00;
}

